namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-manage-custody-mailbox-register-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-manage-custody-mailbox-register-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage-pom-cases"
    cloud-platform.justice.gov.uk/application: "HMPPS Manage Custody Mailbox Register"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-manage-custody-mailbox-register"
    cloud-platform.justice.gov.uk/team-name: "mailbox-register-live"
    cloud-platform.justice.gov.uk/review-after: ""
